# NRFNode

./: .gitignore  BLETester.pro  README.md  bleinterface.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
Firmware/FreeRTOS_NRFnode/: main.c
Firmware/FreeRTOS_NRFnode/modules/: imu.c  imu.h  ws2812_spi.c  ws2812_spi.h
Firmware/FreeRTOS_NRFnode/service/: motion_service.c
Firmware/SensiML/: main.c
Firmware/SensiML/modules/: imu.c  imu.h
Firmware/SensiML/service/: info_service.c  info_service.h  motion_service.h
Firmware/hex/connectivity/: connectivity_1.0.0_1m_with_s132_5.1.0.hex
FreeRTOS_NRFnode/: main.c
FreeRTOS_NRFnode/modules/: imu.c  imu.h  ws2812_spi.c  ws2812_spi.h
FreeRTOS_NRFnode/service/: motion_service.c  motion_service.h
Production/: soldering.md
Production/case/: 3dPCB.step  ED_上蓋_V2.STL  ED_下蓋_V2.STL
Production/dongle/: OpenSK_Case_v1.stl  OpenSK_Key_Enclosure_v1.step  OpenSK_Lid_v1.stl
Software/bluez/: mainwindow.ui
Software/bluez/bleservices/: environment_service.h
Software/bluez/py/: ffttest.py
Software/nrf52ble/: main.cpp  nrf52ble.pro
Software/nrf52ble/BleManager/: manager.cpp
Software/nrf52ble/python/: bletest.py  serilnum.py
Software/nrf52ble/tcpsocket/: tcpsocket.h
bleservices/: config_service.h  environment_service.cpp  motion_service.cpp  motion_service.h  sound_service.cpp  sound_service.h  thingy_manager.cpp  thingy_manager.h  thingy_service.h  ui_service.cpp
bluez/: bleinterface.h
bluez/bleservices/: config_service.cpp  thingy_manager.cpp  thingy_manager.h  thingy_service.h  ui_service.h
bluez/plotthread/: plotthread.cpp
bluez/py/: record.txt
build-mini-cmake-qt-Desktop_Qt_5_12_5_MinGW_64_bit-Debug/: CMakeCache.txt  Makefile  cmake_install.cmake  example.cbp
build-mini-cmake-qt-Desktop_Qt_5_12_5_MinGW_64_bit-Debug/example_autogen/: moc_predefs.h
build-mini-cmake-qt-Desktop_Qt_5_12_5_MinGW_64_bit-Debug/example_autogen/UVLADIE3JM/: moc_mainwindow.cpp
build-mini-cmake-qt-Desktop_Qt_5_12_5_MinGW_64_bit-Debug/example_autogen/include/: ui_mainwindow.h
build-nrf52ble-Desktop_Qt_5_12_5_MinGW_32_bit-Debug/: .qmake.stash  Makefile  Makefile.Debug  Makefile.Release  nrf52ble_resource.rc
hex/connectivity/: connectivity_1.0.0_1m_with_s132_5.1.0.hex
mini-cmake-qt/: CMakeLists.txt  CMakeLists.txt.user.4458fdb
mini-cmake-qt/src/: mainwindow.cpp  mainwindow.h  mainwindow.ui
nrf52ble/: CMakeLists.txt  CMakeLists.txt.user.ba9229e  main.cpp  nrf52ble.pro
nrf52ble/libble/nrf-ble-driver-4.1.4-linux_x86_64/lib/: libnrf-ble-driver-sd_api_v2.so.4  libnrf-ble-driver-sd_api_v3.so.4  libnrf-ble-driver-sd_api_v5.so.4  libnrf-ble-driver-sd_api_v6.so.4
nrf52ble/libble/nrf-ble-driver-4.1.4-linux_x86_64/share/nrf-ble-driver/: nrf-ble-driverConfig.cmake  nrf-ble-driverTargets.cmake
nrf52ble/libble/nrf-ble-driver-4.1.4-linux_x86_64/share/nrf-ble-driver/hex/sd_api_v2/: connectivity_4.1.4_1m_with_s130_2.0.1.hex  connectivity_4.1.4_1m_with_s132_2.0.1.hex
nrf52ble/libble/nrf-ble-driver-4.1.4-linux_x86_64/share/nrf-ble-driver/hex/sd_api_v3/: connectivity_4.1.4_1m_with_s132_3.1.0.hex  connectivity_4.1.4_usb_for_s132_3.1.0.hex  connectivity_4.1.4_usb_with_s132_3.1.0.hex
nrf52ble/libble/nrf-ble-driver-4.1.4-linux_x86_64/share/nrf-ble-driver/hex/sd_api_v5/: connectivity_4.1.4_1m_with_s132_5.1.0.hex  connectivity_4.1.4_usb_for_s132_5.1.0.hex  connectivity_4.1.4_usb_with_s132_5.1.0.hex
nrf52ble/libble/nrf-ble-driver-4.1.4-linux_x86_64/share/nrf-ble-driver/hex/sd_api_v6/: connectivity_4.1.4_usb_for_s140_6.1.1.hex  connectivity_4.1.4_usb_with_s140_6.1.1.hex
nrf52ble/libble/nrf-ble-driver-4.1.4-win_x86_64/include/sd_api_v2/: adapter.h  ble.h  ble_gap.h  ble_gatt.h  ble_gattc.h  ble_gatts.h  ble_hci.h  ble_l2cap.h  nrf.h  nrf_svc.h  sd_rpc.h
nrf52ble/libble/nrf-ble-driver-4.1.4-win_x86_64/include/sd_api_v3/: ble.h  ble_gap.h  ble_gattc.h  ble_gatts.h  ble_l2cap.h  platform.h  sd_rpc_types.h
nrf52ble/libble/nrf-ble-driver-4.1.4-win_x86_64/include/sd_api_v5/: ble.h  ble_gap.h  ble_gattc.h  ble_gatts.h  ble_l2cap.h
nrf52ble/libble/nrf-ble-driver-4.1.4-win_x86_64/include/sd_api_v6/: ble.h  ble_gap.h  ble_gattc.h  ble_gatts.h  ble_l2cap.h
nrf52ble/libble/nrf-ble-driver-4.1.4-win_x86_64/lib/: nrf-ble-driver-sd_api_v2-mt-4_1_4.lib  nrf-ble-driver-sd_api_v3-mt-4_1_4.lib
nrf52ble/libble/nrf-ble-driver-4.1.4-win_x86_64/share/: LICENSE
nrf52ble/libble/nrf-ble-driver-4.1.4-win_x86_64/share/nrf-ble-driver/: nrf-ble-driverConfig.cmake  nrf-ble-driverConfigVersion.cmake  nrf-ble-driverTargets-release.cmake  nrf-ble-driverTargets.cmake
nrf52ble/libble/nrf-ble-driver-4.1.4-win_x86_64/share/nrf-ble-driver/hex/sd_api_v2/: connectivity_4.1.4_1m_with_s130_2.0.1.hex  connectivity_4.1.4_1m_with_s132_2.0.1.hex
nrf52ble/libble/nrf-ble-driver-4.1.4-win_x86_64/share/nrf-ble-driver/hex/sd_api_v3/: connectivity_4.1.4_usb_for_s132_3.1.0.hex  connectivity_4.1.4_usb_with_s132_3.1.0.hex
nrf52ble/libble/nrf-ble-driver-4.1.4-win_x86_64/share/nrf-ble-driver/hex/sd_api_v5/: connectivity_4.1.4_usb_for_s132_5.1.0.hex  connectivity_4.1.4_usb_with_s132_5.1.0.hex
nrf52ble/libble/nrf-ble-driver-4.1.4-win_x86_64/share/nrf-ble-driver/hex/sd_api_v6/: connectivity_4.1.4_1m_with_s132_6.1.1.hex  connectivity_4.1.4_1m_with_s140_6.1.1.hex  connectivity_4.1.4_usb_for_s140_6.1.1.hex  connectivity_4.1.4_usb_with_s140_6.1.1.hex
nrf52ble/python/: pytest.py
nrf52ble/tcpsocket/: tcpsocket.c  tcpsocket.h
pca10100/s140/ses/: usbd_ble_uart_freertos_pca10056_s140.emProject  usbd_ble_uart_freertos_pca10056_s140.emSession
plotthread/: plotthread.cpp  plotthread.h
(+34 files in other folders)
